# hot-dev-env

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  UMAP_INTEGRATION.md  UMAP_SETUP_GUIDE.md  add-local-domains.sh  docker-compose.field-tm.yml  docker-compose.yml  fair.hotosm.test+4-key.pem  fair.hotosm.test+4.pem
config/: chatmap-config.json  export-tool-settings.py  hanko-config.yaml  tasking-manager.env
docs/: HTTPS_SETUP.md
scripts/: add-hosts.sh  deploy-status.sh  init-field-tm-env.sh  load-dump.sh  setup-https.sh  setup-test-users.sh  setup.sh  update-auth-libs.sh
tools/deploy-status/: pyproject.toml
tools/deploy-status/deploy_status/: __init__.py  app.py  github.py  models.py  styles.tcss
tools/deploy-status/deploy_status/widgets/: __init__.py  app_card.py  detail_view.py
