[project]
name = "deploy-status"
version = "0.1.0"
description = "HOTOSM Deploy Status Dashboard"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.27.0",
    "humanize>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.5.0",
]

[project.scripts]
deploy-status = "deploy_status.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
